second test commit

--- a/index.html
+++ b/index.html
@@ -9,13 +9,16 @@
   <link rel="stylesheet" href="styles.css">
   <title>Frontend Mentor | QR code component</title>
 
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&display=swap" rel="stylesheet"> 
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
   <style>
     .attribution { font-size: 11px; text-align: center; }
     .attribution a { color: hsl(228, 45%, 44%); }
   </style>
 </head>
-<body>
+<body class="outfit-font">
   <div class="card-body">
     <img src="./images/image-qr-code.png" alt="QR-code image" class="qr-image"/>
     <h1 class="main-heading">Improve your front-end skills by building projects</h1>
